# robot_kinematic_simulation

./: .travis_rosinstall  CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/robot_kinematic_simulation/: embedded_sim.hpp  kinematic_simulation.hpp  node_sim.hpp
launch/: sim.launch
src/: embedded_sim.cpp  kinematic_simulation.cpp  node_sim.cpp
