<?xml version="1.0"?>
<package format="2">
  <name>robot_kinematic_simulation</name>
  <version>1.0.0</version>
  <description>
    Performs a kinematic simulation of a robot (joint positions + velocities only)
  </description>
  <author email="diogoa@kth.se">Diogo Almeida</author>
  <maintainer email="diogoa@kth.se">Diogo Almeida</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>generic_control_toolbox</depend>
</package>
